created viewmodel and display todo items

--- a/app/src/main/res/layout/todo_item.xml
+++ b/app/src/main/res/layout/todo_item.xml
@@ -12,7 +12,8 @@
         android:id="@+id/todo_checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="24sp"
+        android:textSize="14sp"
         tools:checked="true"
+        android:clickable="false"
         tools:text="quis ut nam facilis et officia qui" />
 </LinearLayout>
